--- a/packages/utils/package.json
+++ b/packages/utils/package.json
@@ -4,6 +4,8 @@
   "description": "utils for eos sdk",
   "repository": "https://github.com/smartum-ks/eos-sdk.git",
   "main": "./out/index.js",
+  "types": "./out/types.d.ts",
+  "typings": "./out",
   "scripts": {
     "build": "tsc --module commonjs",
     "test": "echo \"Error: no test specified\" && exit 1"
