--- a/packages/utils/package.json
+++ b/packages/utils/package.json
@@ -18,6 +18,8 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "demux": "^2.0.0",
+    "demux-eos": "^2.0.0",
     "eosjs": "^16.0.7",
     "sleep": "^5.2.3"
   },
