--- a/packages/registry/package.json
+++ b/packages/registry/package.json
@@ -8,7 +8,7 @@
   "repository": "https://github.com/smartum-ks/eos-sdk.git",
   "scripts": {
     "build": "tsc --module commonjs",
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "mocha $PKG -r ts-node/register src/test/test.ts --timeout 10000"
   },
   "keywords": [
     "eos",
@@ -18,10 +18,19 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "eosjs": "^16.0.8"
+    "eosjs": "^16.0.8",
+    "chai-as-promised": "7.1.1",
+    "chai-bignumber": "2.0.2"
   },
   "devDependencies": {
-    "@types/node": "^10.10.0",
-    "@zapjs/eos-utils": "^1.0.0"
+    "mocha": "5.2.0",
+    "chai": "^4.2.0",
+    "@types/chai": "^4.1.5",
+    "@types/mocha": "^5.2.4",
+    "@types/node": "^10.10.3",
+    "@zapjs/eos-utils": "^1.0.0",
+    "ts-node": "^7.0.1",
+    "tslint": "^5.10.0",
+    "typescript": "^2.9.2"
   }
 }
