--- a/packages/dispatch/package.json
+++ b/packages/dispatch/package.json
@@ -21,7 +21,13 @@
     "eosjs": "^16.0.8"
   },
   "devDependencies": {
+    "mocha": "5.2.0",
+    "chai": "^4.2.0",
+    "@types/chai": "^4.1.5",
+    "@types/mocha": "^5.2.4",
     "@types/node": "^10.10.0",
-    "@zapjs/eos-utils": "^1.0.0"
+    "@zapjs/eos-utils": "^1.0.0",
+    "@zapjs/eos-registry": "^1.0.0",
+    "@zapjs/eos-bondage": "^1.0.0"
   }
 }
