--- a/packages/dispatch/package.json
+++ b/packages/dispatch/package.json
@@ -8,7 +8,7 @@
   "repository": "https://github.com/smartum-ks/eos-sdk.git",
   "scripts": {
     "build": "tsc --module commonjs",
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "mocha $PKG -r ts-node/register src/test/test.ts --timeout 10000"
   },
   "keywords": [
     "eos",
@@ -28,6 +28,12 @@
     "@types/node": "^10.10.0",
     "@zapjs/eos-utils": "^1.0.0",
     "@zapjs/eos-registry": "^1.0.0",
-    "@zapjs/eos-bondage": "^1.0.0"
+    "@zapjs/eos-bondage": "^1.0.0",
+    "ts-node": "^7.0.1",
+    "tslint": "^5.10.0",
+    "typescript": "^2.9.2",
+    "chai-as-promised": "7.1.1",
+    "chai-bignumber": "2.0.2",
+    "@zapjs/eos-binaries": "^1.0.0"
   }
 }
