--- a/packages/registry/package.json
+++ b/packages/registry/package.json
@@ -31,6 +31,7 @@
     "@zapjs/eos-utils": "^1.0.0",
     "ts-node": "^7.0.1",
     "tslint": "^5.10.0",
-    "typescript": "^2.9.2"
+    "typescript": "^2.9.2",
+    "@zapjs/eos-binaries": "^1.0.0"
   }
 }
