--- a/packages/utils/package.json
+++ b/packages/utils/package.json
@@ -21,7 +21,8 @@
     "demux": "^2.0.0",
     "demux-eos": "^2.0.0",
     "eosjs": "^16.0.7",
-    "sleep": "^5.2.3"
+    "sleep": "^5.2.3",
+    "@zapjs/caching": "^5.2.3"
   },
   "devDependencies": {
     "@types/node": "^10.10.0"
