--- a/packages/provider/package.json
+++ b/packages/provider/package.json
@@ -31,6 +31,7 @@
     "@zapjs/eos-bondage": "^1.0.0",
     "@zapjs/eos-arbiter": "^1.0.0",
     "@zapjs/eos-dispatch": "^1.0.0",
+    "@zapjs/eos-subscriber": "^1.0.0",
     "ts-node": "^7.0.1",
     "tslint": "^5.10.0",
     "typescript": "^2.9.2",
