--- a/packages/bondage/package.json
+++ b/packages/bondage/package.json
@@ -28,12 +28,13 @@
     "@types/node": "^10.10.0",
     "@zapjs/eos-utils": "^1.0.0",
     "@zapjs/eos-registry": "^1.0.0",
-    "@zapjs/minting": "^1.0.0",
+    "@zapjs/eos-minting": "^1.0.0",
     "ts-node": "^7.0.1",
     "tslint": "^5.10.0",
     "typescript": "^2.9.2",
     "chai-as-promised": "7.1.1",
     "chai-bignumber": "2.0.2",
+    "@zapjs/eos-node-utils": "^1.0.0",
     "@zapjs/eos-binaries": "^1.0.0"
   }
 }
