--- a/packages/node-utils/package.json
+++ b/packages/node-utils/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "@zapjs/eos-utils",
+  "name": "@zapjs/eos-node-utils",
   "version": "1.0.0",
   "description": "utils for eos sdk",
   "repository": "https://github.com/smartum-ks/eos-sdk.git",
@@ -18,7 +18,12 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "eosjs": "^16.0.7"
+    "demux": "^2.0.0",
+    "demux-eos": "^2.0.0",
+    "eosjs": "^16.0.7",
+    "sleep": "^5.2.3",
+    "@zapjs/eos-caching": "^1.0.0",
+    "@zapjs/eos-utils": "^1.0.0"
   },
   "devDependencies": {
     "@types/node": "^10.10.0"
