--- a/packages/provider/package.json
+++ b/packages/provider/package.json
@@ -37,6 +37,7 @@
     "typescript": "^2.9.2",
     "chai-as-promised": "7.1.1",
     "chai-bignumber": "2.0.2",
+    "@zapjs/eos-node-utils": "^1.0.0",
     "@zapjs/eos-binaries": "^1.0.0"
   }
 }
