--- a/packages/registry/package.json
+++ b/packages/registry/package.json
@@ -32,6 +32,7 @@
     "ts-node": "^7.0.1",
     "tslint": "^5.10.0",
     "typescript": "^2.9.2",
+    "@zapjs/eos-node-utils": "^1.0.0",
     "@zapjs/eos-binaries": "^1.0.0"
   }
 }
