--- a/packages/term/package.json
+++ b/packages/term/package.json
@@ -1,7 +1,7 @@
 {
-  "name": "@zapjs/eos-caching",
+  "name": "@zapjs/eos-term",
   "version": "1.0.0",
-  "description": "Interface for caching functions in eos blockchain",
+  "description": "Zap-term for eos",
   "main": "./out/index.js",
   "types": "./out/types.d.ts",
   "typings": "./out",
@@ -12,31 +12,27 @@
   "keywords": [
     "eos",
     "zap",
-    "caching"
+    "registry"
   ],
-  "bin": {
-  "listen-eos": "./out/index.js"
-},
   "author": "",
   "license": "ISC",
   "dependencies": {
     "eosjs": "^16.0.8",
-    "chai-as-promised": "7.1.1",
-    "chai-bignumber": "2.0.2",
-    "demux": "^1.0.3",
-    "demux-eos": "2.0.0",
-    "mongodb": "3.1.8",
-    "@zapjs/eos-provider": "^1.0.0"
+    "big-number": "1.0.0",
+    "hdkey": "1.1.0",
+    "wif": "2.0.6",
+    "bip39": "2.5.0",
+    "@zapjs/curve": "2.0.11"
   },
   "devDependencies": {
-    "mocha": "5.2.0",
-    "chai": "^4.2.0",
-    "@types/chai": "^4.1.5",
-    "@types/mocha": "^5.2.4",
     "@types/node": "^10.10.3",
     "@zapjs/eos-utils": "^1.0.0",
+    "@zapjs/eos-node-utils": "^1.0.0",
+    "@zapjs/eos-subscriber": "^1.0.0",
+    "@zapjs/eos-provider": "^1.0.0",
     "ts-node": "^7.0.1",
     "tslint": "^5.10.0",
-    "typescript": "^2.9.2"
+    "typescript": "^2.9.2",
+    "@zapjs/eos-binaries": "^1.0.0"
   }
 }
