--- a/packages/term/package.json
+++ b/packages/term/package.json
@@ -17,12 +17,13 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "eosjs": "^16.0.8",
+    "@zapjs/curve": "2.0.11",
     "big-number": "1.0.0",
-    "hdkey": "1.1.0",
-    "wif": "2.0.6",
     "bip39": "2.5.0",
-    "@zapjs/curve": "2.0.11"
+    "eosjs": "^16.0.8",
+    "hdkey": "1.1.0",
+    "shebang-loader": "0.0.1",
+    "wif": "2.0.6"
   },
   "devDependencies": {
     "@types/node": "^10.10.3",
