--- a/packages/1common-utils/package.json
+++ b/packages/1common-utils/package.json
@@ -21,6 +21,9 @@
     "eosjs": "^16.0.7"
   },
   "devDependencies": {
-    "@types/node": "^10.10.0"
+    "@types/node": "^10.10.0",
+    "ts-node": "^7.0.1",
+    "tslint": "^5.10.0",
+    "typescript": "^2.9.2"
   }
 }
