--- a/packages/contracts/package.json
+++ b/packages/contracts/package.json
@@ -20,6 +20,9 @@
   "dependencies": {
   },
   "devDependencies": {
-    "@types/node": "^10.10.0"
+    "@types/node": "^10.10.0",
+    "ts-node": "^7.0.1",
+    "tslint": "^5.10.0",
+    "typescript": "^2.9.2"
   }
 }
