--- a/packages/2node-utils/package.json
+++ b/packages/2node-utils/package.json
@@ -18,12 +18,12 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "@zapjs/eos-caching": "^0.0.2",
+    "@zapjs/eos-utils": "^0.0.2",
     "demux": "^2.0.0",
     "demux-eos": "^2.0.0",
     "eosjs": "^16.0.7",
-    "sleep": "^5.2.3",
-    "@zapjs/eos-caching": "^1.0.0",
-    "@zapjs/eos-utils": "^1.0.0"
+    "sleep": "^5.2.3"
   },
   "devDependencies": {
     "@types/node": "^10.10.0",
