--- a/packages/provider/package.json
+++ b/packages/provider/package.json
@@ -21,23 +21,23 @@
     "eosjs": "^16.0.8"
   },
   "devDependencies": {
-    "mocha": "5.2.0",
-    "chai": "^4.2.0",
     "@types/chai": "^4.1.5",
     "@types/mocha": "^5.2.4",
     "@types/node": "^10.10.0",
-    "@zapjs/eos-utils": "^1.0.0",
-    "@zapjs/eos-registry": "^1.0.0",
-    "@zapjs/eos-bondage": "^1.0.0",
-    "@zapjs/eos-arbiter": "^1.0.0",
-    "@zapjs/eos-dispatch": "^1.0.0",
-    "@zapjs/eos-subscriber": "^1.0.0",
-    "ts-node": "^7.0.1",
-    "tslint": "^5.10.0",
-    "typescript": "^2.9.2",
+    "@zapjs/eos-arbiter": "^0.0.2",
+    "@zapjs/eos-binaries": "^0.0.2",
+    "@zapjs/eos-bondage": "^0.0.2",
+    "@zapjs/eos-dispatch": "^0.0.2",
+    "@zapjs/eos-node-utils": "^0.0.2",
+    "@zapjs/eos-registry": "^0.0.2",
+    "@zapjs/eos-subscriber": "^0.0.2",
+    "@zapjs/eos-utils": "^0.0.2",
+    "chai": "^4.2.0",
     "chai-as-promised": "7.1.1",
     "chai-bignumber": "2.0.2",
-    "@zapjs/eos-node-utils": "^1.0.0",
-    "@zapjs/eos-binaries": "^1.0.0"
+    "mocha": "5.2.0",
+    "ts-node": "^7.0.1",
+    "tslint": "^5.10.0",
+    "typescript": "^2.9.2"
   }
 }
