--- a/packages/arbiter/package.json
+++ b/packages/arbiter/package.json
@@ -18,7 +18,9 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "eosjs": "^16.0.8"
+    "eosjs": "^16.0.8",
+    "@zapjs/eos-registry": "^1.0.0",
+    "@zapjs/eos-bondage": "^1.0.0"
   },
   "devDependencies": {
     "mocha": "5.2.0",
@@ -27,8 +29,6 @@
     "@types/mocha": "^5.2.4",
     "@types/node": "^10.10.0",
     "@zapjs/eos-utils": "^1.0.0",
-    "@zapjs/eos-registry": "^1.0.0",
-    "@zapjs/eos-bondage": "^1.0.0",
     "ts-node": "^7.0.1",
     "tslint": "^5.10.0",
     "typescript": "^2.9.2",
