--- a/packages/arbiter/package.json
+++ b/packages/arbiter/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@zapjs/eos-arbiter",
-  "version": "1.0.0",
+  "version": "0.0.2",
   "description": "Interface for arbiter functions in eos blockchain",
   "main": "./out/index.js",
   "types": "./out/types.d.ts",
@@ -18,23 +18,23 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "eosjs": "^16.0.8",
-    "@zapjs/eos-registry": "^1.0.0",
-    "@zapjs/eos-bondage": "^1.0.0"
+    "@zapjs/eos-bondage": "^0.0.2",
+    "@zapjs/eos-registry": "^0.0.2",
+    "eosjs": "^16.0.8"
   },
   "devDependencies": {
-    "mocha": "5.2.0",
-    "chai": "^4.2.0",
     "@types/chai": "^4.1.5",
     "@types/mocha": "^5.2.4",
     "@types/node": "^10.10.0",
-    "@zapjs/eos-utils": "^1.0.0",
-    "ts-node": "^7.0.1",
-    "tslint": "^5.10.0",
-    "typescript": "^2.9.2",
+    "@zapjs/eos-binaries": "^0.0.2",
+    "@zapjs/eos-node-utils": "^0.0.2",
+    "@zapjs/eos-utils": "^0.0.2",
+    "chai": "^4.2.0",
     "chai-as-promised": "7.1.1",
     "chai-bignumber": "2.0.2",
-    "@zapjs/eos-node-utils": "^1.0.0",
-    "@zapjs/eos-binaries": "^1.0.0"
+    "mocha": "5.2.0",
+    "ts-node": "^7.0.1",
+    "tslint": "^5.10.0",
+    "typescript": "^2.9.2"
   }
 }
