--- a/packages/term/package.json
+++ b/packages/term/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@zapjs/eos-term",
-  "version": "1.0.0",
+  "version": "0.0.3",
   "description": "Zap-term for eos",
   "main": "./out/index.js",
   "types": "./out/types.d.ts",
@@ -27,13 +27,13 @@
   },
   "devDependencies": {
     "@types/node": "^10.10.3",
-    "@zapjs/eos-utils": "^1.0.0",
-    "@zapjs/eos-node-utils": "^1.0.0",
-    "@zapjs/eos-subscriber": "^1.0.0",
-    "@zapjs/eos-provider": "^1.0.0",
+    "@zapjs/eos-binaries": "^0.0.3",
+    "@zapjs/eos-node-utils": "^0.0.3",
+    "@zapjs/eos-provider": "^0.0.3",
+    "@zapjs/eos-subscriber": "^0.0.3",
+    "@zapjs/eos-utils": "^0.0.3",
     "ts-node": "^7.0.1",
     "tslint": "^5.10.0",
-    "typescript": "^2.9.2",
-    "@zapjs/eos-binaries": "^1.0.0"
+    "typescript": "^2.9.2"
   }
 }
