--- a/packages/1common-utils/package.json
+++ b/packages/1common-utils/package.json
@@ -1,6 +1,7 @@
 {
   "name": "@zapjs/eos-utils",
-  "version": "1.0.0",
+  "version": "0.1.0",
+   "private": false,
   "description": "utils for eos sdk",
   "repository": "https://github.com/smartum-ks/eos-sdk.git",
   "main": "./out/index.js",
@@ -25,5 +26,6 @@
     "ts-node": "^7.0.1",
     "tslint": "^5.10.0",
     "typescript": "^2.9.2"
-  }
+  },
+  "gitHead": "f0b4a71ec6615863663b3be27416465b4987deab"
 }
