--- a/packages/2node-utils/package.json
+++ b/packages/2node-utils/package.json
@@ -1,6 +1,7 @@
 {
   "name": "@zapjs/eos-node-utils",
-  "version": "1.0.0",
+  "version": "0.1.0",
+   "private": false,
   "description": "utils for eos sdk",
   "repository": "https://github.com/smartum-ks/eos-sdk.git",
   "main": "./out/index.js",
@@ -18,17 +19,18 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "@zapjs/eos-caching": "^0.1.0",
+    "@zapjs/eos-utils": "^0.1.0",
     "demux": "^2.0.0",
     "demux-eos": "^2.0.0",
     "eosjs": "^16.0.7",
-    "sleep": "^5.2.3",
-    "@zapjs/eos-caching": "^1.0.0",
-    "@zapjs/eos-utils": "^1.0.0"
+    "sleep": "^5.2.3"
   },
   "devDependencies": {
     "@types/node": "^10.10.0",
     "ts-node": "^7.0.1",
     "tslint": "^5.10.0",
     "typescript": "^2.9.2"
-  }
+  },
+  "gitHead": "f0b4a71ec6615863663b3be27416465b4987deab"
 }
