--- a/packages/cacher/package.json
+++ b/packages/cacher/package.json
@@ -1,6 +1,7 @@
 {
   "name": "@zapjs/eos-caching",
-  "version": "1.0.0",
+  "version": "0.1.0",
+  "private": false,
   "description": "Interface for caching functions in eos blockchain",
   "main": "./out/index.js",
   "types": "./out/types.d.ts",
@@ -15,28 +16,29 @@
     "caching"
   ],
   "bin": {
-  "listen-eos": "./out/index.js"
-},
+    "listen-eos": "./out/index.js"
+  },
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "eosjs": "^16.0.8",
+    "@zapjs/eos-provider": "^0.1.0",
     "chai-as-promised": "7.1.1",
     "chai-bignumber": "2.0.2",
     "demux": "^1.0.3",
     "demux-eos": "2.0.0",
-    "mongodb": "3.1.8",
-    "@zapjs/eos-provider": "^1.0.0"
+    "eosjs": "^16.0.8",
+    "mongodb": "3.1.8"
   },
   "devDependencies": {
-    "mocha": "5.2.0",
-    "chai": "^4.2.0",
     "@types/chai": "^4.1.5",
     "@types/mocha": "^5.2.4",
     "@types/node": "^10.10.3",
-    "@zapjs/eos-utils": "^1.0.0",
+    "@zapjs/eos-utils": "^0.1.0",
+    "chai": "^4.2.0",
+    "mocha": "5.2.0",
     "ts-node": "^7.0.1",
     "tslint": "^5.10.0",
     "typescript": "^2.9.2"
-  }
+  },
+  "gitHead": "f0b4a71ec6615863663b3be27416465b4987deab"
 }
