--- a/packages/contracts/package.json
+++ b/packages/contracts/package.json
@@ -1,6 +1,7 @@
 {
   "name": "@zapjs/eos-binaries",
-  "version": "1.0.0",
+  "version": "0.1.0",
+  "private": false,
   "description": "Binaries for eos sdk",
   "repository": "https://github.com/smartum-ks/eos-sdk.git",
   "main": "./out/index.js",
@@ -17,12 +18,11 @@
   ],
   "author": "",
   "license": "ISC",
-  "dependencies": {
-  },
   "devDependencies": {
     "@types/node": "^10.10.0",
     "ts-node": "^7.0.1",
     "tslint": "^5.10.0",
     "typescript": "^2.9.2"
-  }
+  },
+  "gitHead": "f0b4a71ec6615863663b3be27416465b4987deab"
 }
