--- a/packages/provider/package.json
+++ b/packages/provider/package.json
@@ -1,6 +1,7 @@
 {
   "name": "@zapjs/eos-provider",
-  "version": "1.0.0",
+  "version": "0.1.0",
+  "private": false,
   "description": "Interface for provider functions in eos blockchain",
   "main": "./out/index.js",
   "types": "./out/types.d.ts",
@@ -21,23 +22,24 @@
     "eosjs": "^16.0.8"
   },
   "devDependencies": {
-    "mocha": "5.2.0",
-    "chai": "^4.2.0",
     "@types/chai": "^4.1.5",
     "@types/mocha": "^5.2.4",
     "@types/node": "^10.10.0",
-    "@zapjs/eos-utils": "^1.0.0",
-    "@zapjs/eos-registry": "^1.0.0",
-    "@zapjs/eos-bondage": "^1.0.0",
-    "@zapjs/eos-arbiter": "^1.0.0",
-    "@zapjs/eos-dispatch": "^1.0.0",
-    "@zapjs/eos-subscriber": "^1.0.0",
-    "ts-node": "^7.0.1",
-    "tslint": "^5.10.0",
-    "typescript": "^2.9.2",
+    "@zapjs/eos-arbiter": "^0.1.0",
+    "@zapjs/eos-binaries": "^0.1.0",
+    "@zapjs/eos-bondage": "^0.1.0",
+    "@zapjs/eos-dispatch": "^0.1.0",
+    "@zapjs/eos-node-utils": "^0.1.0",
+    "@zapjs/eos-registry": "^0.1.0",
+    "@zapjs/eos-subscriber": "^0.1.0",
+    "@zapjs/eos-utils": "^0.1.0",
+    "chai": "^4.2.0",
     "chai-as-promised": "7.1.1",
     "chai-bignumber": "2.0.2",
-    "@zapjs/eos-node-utils": "^1.0.0",
-    "@zapjs/eos-binaries": "^1.0.0"
-  }
+    "mocha": "5.2.0",
+    "ts-node": "^7.0.1",
+    "tslint": "^5.10.0",
+    "typescript": "^2.9.2"
+  },
+  "gitHead": "f0b4a71ec6615863663b3be27416465b4987deab"
 }
