--- a/packages/term/package.json
+++ b/packages/term/package.json
@@ -1,6 +1,7 @@
 {
   "name": "@zapjs/eos-term",
-  "version": "1.0.0",
+  "version": "0.1.0",
+  "private": false,
   "description": "Zap-term for eos",
   "main": "./out/index.js",
   "types": "./out/types.d.ts",
@@ -27,13 +28,14 @@
   },
   "devDependencies": {
     "@types/node": "^10.10.3",
-    "@zapjs/eos-utils": "^1.0.0",
-    "@zapjs/eos-node-utils": "^1.0.0",
-    "@zapjs/eos-subscriber": "^1.0.0",
-    "@zapjs/eos-provider": "^1.0.0",
+    "@zapjs/eos-binaries": "^0.1.0",
+    "@zapjs/eos-node-utils": "^0.1.0",
+    "@zapjs/eos-provider": "^0.1.0",
+    "@zapjs/eos-subscriber": "^0.1.0",
+    "@zapjs/eos-utils": "^0.1.0",
     "ts-node": "^7.0.1",
     "tslint": "^5.10.0",
-    "typescript": "^2.9.2",
-    "@zapjs/eos-binaries": "^1.0.0"
-  }
+    "typescript": "^2.9.2"
+  },
+  "gitHead": "f0b4a71ec6615863663b3be27416465b4987deab"
 }
