--- a/packages/2node-utils/package.json
+++ b/packages/2node-utils/package.json
@@ -1,6 +1,7 @@
 {
   "name": "@zapjs/eos-node-utils",
   "version": "1.0.0",
+  "private": false,
   "description": "utils for eos sdk",
   "repository": "https://github.com/smartum-ks/eos-sdk.git",
   "main": "./out/index.js",
