--- a/packages/4registry/package.json
+++ b/packages/4registry/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@zapjs/eos-registry",
-  "version": "1.0.0",
+  "version": "0.1.0-beta",
   "private": false,
   "description": "Interface for registry functions in eos blockchain",
   "main": "./out/index.js",
@@ -19,21 +19,21 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "eosjs": "^16.0.8",
     "chai-as-promised": "7.1.1",
-    "chai-bignumber": "2.0.2"
+    "chai-bignumber": "2.0.2",
+    "eosjs": "^16.0.8"
   },
   "devDependencies": {
-    "mocha": "5.2.0",
-    "chai": "^4.2.0",
     "@types/chai": "^4.1.5",
     "@types/mocha": "^5.2.4",
     "@types/node": "^10.10.3",
-    "@zapjs/eos-utils": "^1.0.0",
+    "@zapjs/eos-binaries": "^0.1.0-beta",
+    "@zapjs/eos-node-utils": "^0.1.0-beta",
+    "@zapjs/eos-utils": "^0.1.0-beta",
+    "chai": "^4.2.0",
+    "mocha": "5.2.0",
     "ts-node": "^7.0.1",
     "tslint": "^5.10.0",
-    "typescript": "^2.9.2",
-    "@zapjs/eos-node-utils": "^1.0.0",
-    "@zapjs/eos-binaries": "^1.0.0"
+    "typescript": "^2.9.2"
   }
 }
