registry test done

--- a/package.json
+++ b/package.json
@@ -7,8 +7,9 @@
   },
   "dependencies": {
     "big-number": "^1.0.0",
-    "eosjs": "^16.0.7",
-    "sleep": "^5.2.3",
+    "eosjs": "20.0.0",
+    "node-fetch": "2.6.0",
+    "sleep": "5.2.3",
     "hdkey": "1.1.0",
     "wif": "2.0.6",
     "bip39": "2.5.0",
