--- a/packages/1common-utils/package.json
+++ b/packages/1common-utils/package.json
@@ -19,7 +19,7 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "eosjs": "^16.0.7"
+    "eosjs": "20.0.0"
   },
   "devDependencies": {
     "@types/node": "^10.10.0",
