--- a/packages/arbiter/package.json
+++ b/packages/arbiter/package.json
@@ -19,9 +19,7 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "eosjs": "^16.0.8",
-    "@zapjs/eos-registry": "^1.0.0",
-    "@zapjs/eos-bondage": "^1.0.0"
+    "eosjs": "^16.0.8"
   },
   "devDependencies": {
     "mocha": "5.2.0",
@@ -36,6 +34,9 @@
     "chai-as-promised": "7.1.1",
     "chai-bignumber": "2.0.2",
     "@zapjs/eos-node-utils": "^1.0.0",
-    "@zapjs/eos-binaries": "^1.0.0"
+    "@zapjs/eos-binaries": "^1.0.0",
+    "@zapjs/eos-minting": "^1.0.0",
+    "@zapjs/eos-registry": "^1.0.0",
+    "@zapjs/eos-bondage": "^1.0.0"
   }
 }
