--- a/packages/dispatch/package.json
+++ b/packages/dispatch/package.json
@@ -24,6 +24,7 @@
   "devDependencies": {
     "mocha": "5.2.0",
     "chai": "^4.2.0",
+    "@zapjs/eos-minting": "^1.0.0",
     "@types/chai": "^4.1.5",
     "@types/mocha": "^5.2.4",
     "@types/node": "^10.10.0",
