--- a/packages/subscriber/package.json
+++ b/packages/subscriber/package.json
@@ -39,6 +39,7 @@
     "chai-as-promised": "7.1.1",
     "chai-bignumber": "2.0.2",
     "@zapjs/eos-node-utils": "^1.0.0",
-    "@zapjs/eos-binaries": "^1.0.0"
+    "@zapjs/eos-binaries": "^1.0.0",
+    "@zapjs/eos-minting": "^1.0.0"
   }
 }
