--- a/packages/5-minting/package.json
+++ b/packages/5-minting/package.json
@@ -21,7 +21,10 @@
   "dependencies": {
     "eosjs": "^16.0.8",
     "chai-as-promised": "7.1.1",
-    "chai-bignumber": "2.0.2"
+    "chai-bignumber": "2.0.2",
+    "@zapjs/eos-node-utils": "^1.0.0",
+    "@zapjs/eos-binaries": "^1.0.0",
+    "@zapjs/eos-utils": "^1.0.0"
   },
   "devDependencies": {
     "mocha": "5.2.0",
@@ -29,11 +32,8 @@
     "@types/chai": "^4.1.5",
     "@types/mocha": "^5.2.4",
     "@types/node": "^10.10.3",
-    "@zapjs/eos-utils": "^1.0.0",
     "ts-node": "^7.0.1",
     "tslint": "^5.10.0",
-    "typescript": "^2.9.2",
-    "@zapjs/eos-node-utils": "^1.0.0",
-    "@zapjs/eos-binaries": "^1.0.0"
+    "typescript": "^2.9.2"
   }
 }
