--- a/packages/C-subscriber/package.json
+++ b/packages/C-subscriber/package.json
@@ -1,8 +1,8 @@
 {
-  "name": "@zapjs/eos-provider",
+  "name": "@zapjs/eos-subscriber",
   "version": "1.0.0",
   "private": false,
-  "description": "Interface for provider functions in eos blockchain",
+  "description": "Interface for subscriber functions in eos blockchain",
   "main": "./out/index.js",
   "types": "./out/types.d.ts",
   "typings": "./out",
@@ -14,12 +14,18 @@
   "keywords": [
     "eos",
     "zap",
-    "provider"
+    "subscriber"
   ],
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "eosjs": "^16.0.8"
+    "eosjs": "20.0.0",
+    "@zapjs/eos-utils": "^1.0.0",
+    "@zapjs/eos-registry": "^1.0.0",
+    "@zapjs/eos-bondage": "^1.0.0",
+    "@zapjs/eos-arbiter": "^1.0.0",
+    "@zapjs/eos-dispatch": "^1.0.0",
+    "@zapjs/eos-provider": "^1.0.0"
   },
   "devDependencies": {
     "mocha": "5.2.0",
@@ -27,19 +33,13 @@
     "@types/chai": "^4.1.5",
     "@types/mocha": "^5.2.4",
     "@types/node": "^10.10.0",
-    "@zapjs/eos-utils": "^1.0.0",
-    "@zapjs/eos-registry": "^1.0.0",
-    "@zapjs/eos-bondage": "^1.0.0",
-    "@zapjs/eos-arbiter": "^1.0.0",
-    "@zapjs/eos-dispatch": "^1.0.0",
-    "@zapjs/eos-subscriber": "^1.0.0",
-    "@zapjs/eos-minting": "^1.0.0",
     "ts-node": "^7.0.1",
     "tslint": "^5.10.0",
     "typescript": "^2.9.2",
     "chai-as-promised": "7.1.1",
     "chai-bignumber": "2.0.2",
     "@zapjs/eos-node-utils": "^1.0.0",
-    "@zapjs/eos-binaries": "^1.0.0"
+    "@zapjs/eos-binaries": "^1.0.0",
+    "@zapjs/eos-minting": "^1.0.0"
   }
 }
