--- a/packages/6-registry/package.json
+++ b/packages/6-registry/package.json
@@ -19,9 +19,7 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "eosjs": "^16.0.8",
-    "chai-as-promised": "7.1.1",
-    "chai-bignumber": "2.0.2",
+    "eosjs": "20.0.0",
     "@zapjs/eos-utils": "^1.0.0"
   },
   "devDependencies": {
@@ -35,6 +33,8 @@
     "typescript": "^2.9.2",
     "@zapjs/eos-minting": "^1.0.0",
     "@zapjs/eos-node-utils": "^1.0.0",
-    "@zapjs/eos-binaries": "^1.0.0"
+    "@zapjs/eos-binaries": "^1.0.0",
+    "chai-as-promised": "7.1.1",
+    "chai-bignumber": "2.0.2"
   }
 }
