--- a/packages/B-provider/package.json
+++ b/packages/B-provider/package.json
@@ -24,8 +24,7 @@
     "@zapjs/eos-registry": "^1.0.0",
     "@zapjs/eos-bondage": "^1.0.0",
     "@zapjs/eos-arbiter": "^1.0.0",
-    "@zapjs/eos-dispatch": "^1.0.0",
-    "@zapjs/eos-subscriber": "^1.0.0"
+    "@zapjs/eos-dispatch": "^1.0.0"
   },
   "devDependencies": {
     "mocha": "5.2.0",
@@ -40,6 +39,7 @@
     "chai-bignumber": "2.0.2",
     "@zapjs/eos-minting": "^1.0.0",
     "@zapjs/eos-node-utils": "^1.0.0",
-    "@zapjs/eos-binaries": "^1.0.0"
+    "@zapjs/eos-binaries": "^1.0.0",
+    "@zapjs/eos-subscriber": "^1.0.0"
   }
 }
