--- a/packages/2-cacher/package.json
+++ b/packages/2-cacher/package.json
@@ -21,7 +21,7 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "eosjs": "^16.0.8",
+    "eosjs": "20.0.0",
     "chai-as-promised": "7.1.1",
     "chai-bignumber": "2.0.2",
     "demux": "4.0.0",
